crates/toml_edit/tests/snapshots/invalid/ext/datetime/seconds-too-large.stderr
TOML parse error at line 1, column 24
  |
1 | foo = 1997-09-09T12:09:69.09Z
  |                        ^
invalid date-time
value is out of range
